--- a/src/styles/page2.css
+++ b/src/styles/page2.css
@@ -158,8 +158,7 @@ img {
     }
 
     .carrouselp2 {
-        display: block;
-    }
+        display: block;    }
 
     .page2 {
         max-width: 100%;
