--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -1,19 +1,22 @@
 img {
     max-width: 100%;
 }
-
+.imagenmembresia{
+    display: none;
+}
 .calcularMembresia {
     margin-top: 5rem;
     background-image: url('../assets/Membresia.png');
     background-repeat: round;
     height: 55rem;
     border-radius: 1rem;
-    padding-left: 11rem;
     padding-top: 12rem;
+    width: 100%;
 }
 
 .tipoplanes {
     margin-right: 0rem;
+    padding-left: 10rem;
 }
 
 .precio {
@@ -45,12 +48,17 @@ img {
     background-color: rgb(0, 80, 117);
     width: 35rem;
     margin: 0;
+    padding: 1rem;
     padding-left: 2rem;
+    border-radius: 1rem;
+
 }
 
 .calcularMembresia {
     display: flex;
+    width: 100%;
 }
+
 
 .precio h1 {
     font-family: 'Monserrat', sans-serif;
@@ -119,9 +127,6 @@ img {
     margin-left: 10rem;
 }
 
-#tiposd {
-    margin-left: 2rem;
-}
 
 .adquirir {
     max-width: max-content;
@@ -146,6 +151,16 @@ img {
 }
 
 @media only screen and (max-width: 767px) {
+
+    .imagenmembresia{
+        display: block;
+        background-image: url('../assets/Membresia.png');
+        width: 100%;
+        height: 20rem;
+        background-position: right top;
+        background-size: cover;
+    }
+
     .escoge {
         display: none;
     }
@@ -164,14 +179,19 @@ img {
         height: auto;
         padding: 0;
         padding-left: 1rem;
+        width: auto;
+        background: none;
     }
 
     #calculah1 {
         font-size: 3rem;
+        width: 100%;
     }
 
     .calcularMembresia p {
         width: 20rem;
+        padding-left: 0;
+        margin-left: 0;
     }
 
     .precio {
@@ -202,6 +222,11 @@ img {
         padding: 0;
         padding-left: 4rem;
     }
+    .tipoplanes p{
+        padding-left: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
 
     .adquirir {
         margin-top: 5rem;
@@ -212,7 +237,10 @@ img {
     }
 
     .tipoplanes {
-        padding-top: 5rem;
+        padding-top: 0rem;
+        padding-left: 0;
+        margin-top: 0rem;
+        width: 100%;
     }
 }
 
@@ -301,6 +329,12 @@ img {
 
     .tipoplanes {
         padding-top: 5rem;
+        padding-left: 0;
+    }
+    .tipoplanes p{
+        padding-left: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
 }
 
@@ -324,6 +358,7 @@ img {
         height: auto;
         padding: 0;
         padding-left: 1rem;
+        width: auto;
     }
 
     #calculah1 {
@@ -389,6 +424,13 @@ img {
 
     .tipoplanes {
         padding-top: 5rem;
+        padding-left: 6rem;
+        width: 900px;
+    }
+    .tipoplanes p{
+        padding-left: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
   }
 
