--- a/src/styles/page3.css
+++ b/src/styles/page3.css
@@ -1,4 +1,4 @@
-img{
+img {
     max-width: 100%;
 }
 
@@ -9,6 +9,7 @@ img{
     background-repeat: no-repeat;
     border-radius: 1rem;
     margin-left: 15.5rem;
+
 }
 
 .titlep3 {
@@ -16,7 +17,7 @@ img{
     top: 40rem;
     left: 18rem;
     border-radius: 1rem;
-    background-color: rgb(0, 114, 166);
+    background-color: rgb(0, 114, 166, 0.8);
     width: 60rem;
     color: white;
     padding: 1rem 2rem 1rem 2rem;
@@ -93,7 +94,7 @@ img{
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
-    margin-left: 5rem;
+    margin-left: 4.4rem;
     position: relative;
     bottom: 10rem;
 }
@@ -137,12 +138,34 @@ img{
     margin-bottom: 2rem;
 }
 
+.carrouselp3,
+.scrollp3 {
+    display: none;
+}
+
 
 @media only screen and (max-width: 767px) {
+
+    .razonescontainer,
+    .razones,
+    .razones2 {
+        display: none;
+    }
+
+    .scrollp3 {
+        margin-bottom: 10rem;
+        margin-left: 1rem;
+    }
+
+    .carrouselp3,
+    .scrollp3 {
+        display: block;
+    }
+
     .containerp3 {
         margin: 0;
         padding: 0;
-        background-position: right;
+        background-position: top right;
     }
 
     .titlep3 {
@@ -171,7 +194,7 @@ img{
     }
 
     .pasosp3 {
-        margin: 0;
+        display: none;
     }
 
     .card h1 {
@@ -185,20 +208,6 @@ img{
         margin-top: 20rem;
     }
 
-    .razones ul,
-    .razones2 ul {
-        margin: 0;
-        font-size: 1rem;
-        width: 20rem;
-        padding-right: 0;
-        margin-bottom: 2rem;
-    }
-
-    .razones li,
-    .razones2 li {
-        width: 15rem;
-        font-size: 1.5rem;
-    }
 
     .razonescontainer {
         display: flex;
@@ -208,14 +217,33 @@ img{
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    .razonescontainer,
+    .razones,
+    .razones2, .carousel {
+        display: none;
+    }
+
+    .scrollp3 {
+        margin-bottom: 10rem;
+        margin-left: 6rem;
+    }
+
+
+    .carrouselp3,
+    .scrollp3 {
+        display: block;
+    }
+
     .containerp3 {
-        background-position: center; 
+        background-position: center;
         margin: 0;
         padding: 0;
     }
 
     .titlep3 {
         position: relative;
+
         left: 0;
         top: 40rem;
         width: 92%;
@@ -239,10 +267,11 @@ img{
         width: 30rem;
     }
 
-    .card p{
+    .card p {
         font-size: 2rem;
     }
-    .card h1{
+
+    .card h1 {
         font-size: 3rem;
     }
 
@@ -286,61 +315,70 @@ img{
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .containerp3{
+    .containerp3 {
         margin: 0;
     }
-    .titlep3{
+
+    .titlep3 {
         left: 10rem;
         width: 70%;
     }
-    .pasosp3{
+
+    .pasosp3 {
         display: flex;
         flex-direction: column;
         height: 80rem;
     }
-    .imagenp3{
+
+    .imagenp3 {
         display: none;
     }
-    .numbers{
+
+    .numbers {
         margin: 0;
         left: 0;
     }
 
-    .textpasos{
+    .textpasos {
         position: relative;
         bottom: 65rem;
     }
 
-    .razonescontainer{
+    .razonescontainer {
         display: flex;
         flex-direction: column;
     }
-  }
+}
 
-  @media only screen and (min-width: 1200px) and  (max-width: 1700px) {
-    .titlep3{
+@media only screen and (min-width: 1200px) and (max-width: 1700px) {
+    .titlep3 {
         left: 12rem;
     }
-    .pasosp3{
+
+    .pasosp3 {
         margin-left: 0;
     }
-    .numbers{
+
+    .numbers {
         margin-left: 0;
         left: 0rem;
     }
-    .textpasos{
+
+    .textpasos {
         margin-left: 2rem;
     }
 
-    .razonescontainer{
+    .razonescontainer {
         display: flex;
         flex-direction: column;
     }
-    .containerp3{
+
+    .containerp3 {
         margin-left: 0rem;
     }
 
-    .razones ul, .razones2 ul{
+    .razones ul,
+    .razones2 ul {
         margin-left: 20rem;
     }
-  }
+}
