--- a/src/styles/Scrollvalores.css
+++ b/src/styles/Scrollvalores.css
@@ -11,14 +11,15 @@
   }
   
   .scroll-snap-card2 {
-    height: 7rem;
-    width: 15rem;
+    height: 18rem;
+    width: 20rem;
     scroll-snap-type: y mandatory;
     overflow: auto;
     border-radius: 10px;
   }
   
   .scroll-snap-card2 .slide2 {
+    flex-direction: column;
     width: 100%;
     height: 100%;
     scroll-snap-align: start;
@@ -32,4 +33,13 @@
     font-size: 1.6rem;
     color: white;
     font-weight: 700;
+    margin-bottom: 0;
+  }
+
+  .slide2 h5{
+    margin-left: 1rem;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    width: 80%;
   }
