fix: png to webp format

--- a/src/styles/Blog.css
+++ b/src/styles/Blog.css
@@ -1,5 +1,5 @@
 .contenthub{
-    background-image: url('../assets/fondomorado.png');
+    background-image: url('../assets/fondomorado.webp');
     background-repeat: round;
     height: 60rem;
     margin-top: 5rem;
