--- a/src/styles/FAQ.css
+++ b/src/styles/FAQ.css
@@ -2,7 +2,7 @@
     margin-top: 5rem;
     border-radius: 1rem;
     display: flex;
-    background-image: url('../assets/fondomorado.png');
+    background-image: url('../assets/fondomorado.webp');
     background-repeat: round;
 }
 
