--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -6,7 +6,7 @@ img {
 }
 .calcularMembresia {
     margin-top: 5rem;
-    background-image: url('../assets/Membresia.png');
+    background-image: url('../assets/Membresia.webp');
     background-repeat: round;
     height: 55rem;
     border-radius: 1rem;
