--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -5,7 +5,7 @@ img {
 .contentp4 {
     margin-top: 5rem;
     border-radius: 1rem;
-    background-image: url('../assets/fondoblanco.png');
+    background-image: url('../assets/fondoblanco.webp');
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 100%;
