--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -1,6 +1,6 @@
 .verificacioncontainer {
     margin-top: 5rem;
-    background-image: url('../assets/fondoblanco.png');
+    background-image: url('../assets/fondoblanco.webp');
     background-repeat: round;
     display: flex;
 }
