--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -8,7 +8,7 @@ img {
 
 
 .welcome {
-    background-image: url('../assets/fondoazul.png');
+    background-image: url('../assets/fondoazul.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
