--- a/src/styles/page3.css
+++ b/src/styles/page3.css
@@ -4,7 +4,7 @@ img {
 
 .containerp3 {
     margin-top: 5rem;
-    background-image: url('../assets/afiliacion_familia.png');
+    background-image: url('../assets/afiliacion-familia.webp');
     height: 50rem;
     background-repeat: no-repeat;
     border-radius: 1rem;
