--- a/src/styles/page2.css
+++ b/src/styles/page2.css
@@ -21,7 +21,7 @@ img {
 .textp2 {
     border-radius: 1rem;
     width: 115rem;
-    background-image: url('../assets/Nosotros.png');
+    background-image: url('../assets/Nosotros.webp');
     background-repeat: no-repeat;
     height: 59rem;
     margin-left: 8.5rem;
@@ -88,7 +88,7 @@ img {
 
 .valores {
     margin-top: 6rem;
-    background-image: url('../assets/valores.png');
+    background-image: url('../assets/valores.webp');
     background-repeat: no-repeat;
     box-shadow: 0px 56px 5px 0px white
 }
