--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -1,7 +1,7 @@
 .profilecontainer {
     margin-top: 5rem;
     border-radius: 1rem;
-    background-image: url('../assets/fondoblanco.png');
+    background-image: url('../assets/fondoblanco.webp');
     background-repeat: round;
     display: flex;
 }
