fix: margin scroll p3

--- a/src/styles/Scrollvalores.css
+++ b/src/styles/Scrollvalores.css
@@ -38,6 +38,7 @@
 
   .slide2 h5{
     margin-left: 1rem;
+    margin-top: .5rem;
     color: white;
     font-family: 'Lato', sans-serif;
     font-size: 1rem;
