--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -156,7 +156,7 @@ img {
 
     .imagenmembresia{
         display: block;
-        background-image: url('../assets/Membresia.png');
+        background-image: url('../assets/Membresia.webp');
         width: 100%;
         height: 20rem;
         background-position: right top;
