--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -66,7 +66,7 @@ a {
         margin: 0;
         margin-top: 2rem;
         margin-bottom: 4rem;
-        margin-left: 11rem;
+        margin-left: 11rem
     }
 
 
@@ -116,7 +116,7 @@ a {
         margin-top: 7rem;
         margin-bottom: 4rem;
         width: 6rem;
-        margin-left: 22rem;
+        margin-left: 26rem;
     }
 
     .hamburguesa {
@@ -144,7 +144,7 @@ a {
     .imagenlogo img {
         margin: 0;
         width: 35rem;
-        margin-left: 7rem;
+        margin-left: 12rem;
         margin-top: 3rem;
     }
     .header{
