--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -203,7 +203,14 @@ img {
     }
 
     .precio p {
-        font-size: 1.5rem;
+        font-size: 1rem;
+    }
+
+    .precio h2{
+        font-size: 2rem;
+    }
+    .precio h1{
+        font-size: 2.5rem;
     }
 
     .tipos {
@@ -228,6 +235,7 @@ img {
         padding-left: 1rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
+        font-size: 1.5rem;
     }
 
     .adquirir {
@@ -243,6 +251,10 @@ img {
         padding-left: 0;
         margin-top: 0rem;
         width: 100%;
+    }
+
+    .tipoplanes h2{
+        font-size: 2rem;
     }
 }
 
