--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -37,11 +37,11 @@ img {
 }
 
 .formp4 input {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     border-radius: .9rem;
     width: 24rem;
     padding-left: 2rem;
-    height: 3rem;
+    height: 1rem;
     margin-bottom: 1rem;
     font-family: 'Monserrat', sans-serif;
     padding-top: 1rem;
@@ -59,7 +59,7 @@ img {
 #afiliarsebutton {
     font-family: 'Monserrat', sans-serif;
     font-weight: 700;
-    font-size: 4rem;
+    font-size: 2rem;
     color: white;
     text-align: center;
     background: linear-gradient(to right, rgb(26, 191, 219), rgb(2, 80, 116));
@@ -94,6 +94,11 @@ img {
         display: none;
     }
 
+    #afiliarsebutton{
+        font-size: 3rem;
+        margin-bottom: 1rem;
+    }
+
 
     .formp4 {
         border-radius: 0%;
@@ -104,6 +109,7 @@ img {
     }
     .formp4 button{
         margin-bottom: 5rem;
+
     }
     .buttonslogin button{
         margin-bottom: 0;
@@ -114,8 +120,8 @@ img {
         border-radius: .9rem;
         width: 20rem;
         padding-left: 2rem;
-        height: 5rem;
-        margin-bottom: 3rem;
+        height: 4rem;
+        margin-bottom: 1.5rem;
         font-family: 'Monserrat', sans-serif;
         padding-top: 0;
         padding-bottom: 0;
@@ -160,7 +166,7 @@ img {
     }
     
     .formp4 {
-        margin-left: 15rem;
+        margin-left: 12.5rem;
     }
 
     .imageblog {
