--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -64,9 +64,10 @@ a {
     #iconbar {
         display: block;
         margin: 0;
-        margin-top: 2rem;
-        margin-bottom: 4rem;
-        margin-left: 11rem
+        margin-top: 1.5rem;
+        margin-left: 2rem;
+        margin-right: 1rem;
+        order: -1;
     }
 
 
@@ -74,18 +75,21 @@ a {
         width: max-content;
         display: flex;
         flex-direction: column;
-        margin-left: 4rem;
-        transition: max-height 0.3s ease-in-out;
-        transition: opacity 0.3s ease-in-out;
+        margin-top: 2rem;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        margin-left: 7.5rem;
     }
 
     .hamburguesa h2 {
         width: max-content;
+        font-size: 1.5rem;
     }
 
     #session {
         margin-left: 0;
-        margin-bottom: 7rem;
+        margin-bottom: 2rem;
     }
 
     .links {
@@ -93,18 +97,28 @@ a {
     }
 
     .header {
+        background-color: white;
         flex-direction: column;
-        max-width: max-content;
+        width: 100%;
+        position: sticky;
+        top: 0;
+        z-index: 4;
+        margin-bottom: 1rem;
     }
 
     .imagenlogo img {
         margin: 0;
-        width: 20rem;
-        margin-left: 2.5rem;
-        margin-top: 3rem;
+        width: 16rem;
+        margin-left: 1rem;
+        margin-top: 1.5rem;
     }
 
-    #session{
+    .chan{
+        display: flex;
+        flex-direction: row;
+    }
+
+    #session {
         margin-left: 0;
     }
 }
@@ -147,10 +161,12 @@ a {
         margin-left: 9rem;
         margin-top: 3rem;
     }
-    .header{
+
+    .header {
         width: max-content;
     }
-    #session{
+
+    #session {
         margin-left: 0;
     }
 }
@@ -166,6 +182,7 @@ a {
         width: 8rem;
         margin-left: 30rem;
     }
+
     .hamburguesa {
         width: max-content;
         display: flex;
@@ -174,7 +191,8 @@ a {
         transition: max-height 0.3s ease-in-out;
         transition: opacity 0.3s ease-in-out;
     }
-    #session{
+
+    #session {
         margin-left: 0;
     }
 
