--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -129,6 +129,7 @@ img {
     .welcome {
         background-position: right;
         height: 72rem;
+        margin-top: 0;
     }
 
     .transforma {
@@ -158,6 +159,8 @@ img {
         margin-top: 5rem;
         margin-left: .3rem;
     }
+
+    
 }
 
 
