--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -215,17 +215,18 @@ img {
     }
 
     .transforma {
-        display: none;
+        left: 2rem;
+        bottom: 25rem;
     }
 
     #big {
         margin-left: 0;
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     .textp1 {
         margin-left: 0;
-        width: 60rem;
+        width: 50rem;
         margin-left: 5rem;
     }
 
@@ -241,6 +242,10 @@ img {
 
     .textp1 h2 {
         font-size: 7rem;
+        width: fit-content;
+    }
+    .textp1 h1{
+        width: fit-content;
     }
 
     .scroll {
