--- a/src/styles/page3.css
+++ b/src/styles/page3.css
@@ -99,6 +99,7 @@ img {
     border-top: 1rem solid rgb(1, 102, 149);
     width: min-content;
     margin-bottom: 0;
+    margin-top: 3rem;
 }
 
 .planesp3 p {
@@ -359,6 +360,10 @@ img {
 
     .pasosp3 {
         margin-left: 0;
+    }
+
+    .planesp3{
+        margin-top: 9.5rem;
     }
 
     .numbers {
