--- a/src/styles/page2.css
+++ b/src/styles/page2.css
@@ -221,6 +221,7 @@ img {
         font-size: 1.2rem;
         padding-left: 2rem;
         text-align: left;
+        text-wrap: balance;
     }
 
     .textContainerNosotros {
