add: accordion membresia

--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -1,9 +1,11 @@
 img {
     max-width: 100%;
 }
-.imagenmembresia{
+
+.ac {
     display: none;
 }
+
 .calcularMembresia {
     margin-top: 5rem;
     background-image: url('../assets/Membresia.webp');
@@ -154,7 +156,14 @@ img {
 
 @media only screen and (max-width: 767px) {
 
-    .imagenmembresia{
+    .ac {
+        display: block;
+    }
+    .tipos{
+        display: none;
+    }
+
+    .imagenmembresia {
         display: block;
         background-image: url('../assets/Membresia.webp');
         width: 100%;
@@ -206,10 +215,11 @@ img {
         font-size: 1rem;
     }
 
-    .precio h2{
+    .precio h2 {
         font-size: 2rem;
     }
-    .precio h1{
+
+    .precio h1 {
         font-size: 2.5rem;
     }
 
@@ -231,7 +241,8 @@ img {
         padding: 0;
         padding-left: 4rem;
     }
-    .tipoplanes p{
+
+    .tipoplanes p {
         padding-left: 1rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
@@ -253,7 +264,7 @@ img {
         width: 100%;
     }
 
-    .tipoplanes h2{
+    .tipoplanes h2 {
         font-size: 2rem;
     }
 }
@@ -287,7 +298,8 @@ img {
     .calcularMembresia p {
         width: 20rem;
     }
-    .tipoplanes p{
+
+    .tipoplanes p {
         padding-right: 15rem;
     }
 
@@ -309,7 +321,9 @@ img {
         color: white;
         font-weight: 300;
     }
-    .precio h2, .precio h1{
+
+    .precio h2,
+    .precio h1 {
         color: white;
     }
 
@@ -345,12 +359,14 @@ img {
         padding-top: 5rem;
         padding-left: 0;
     }
-    .tipoplanes p{
+
+    .tipoplanes p {
         padding-left: 1rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
-    .footer{
+
+    .footer {
         margin-top: 0rem;
     }
 }
@@ -385,7 +401,8 @@ img {
     .calcularMembresia p {
         width: 20rem;
     }
-    .tipoplanes p{
+
+    .tipoplanes p {
         padding-right: 15rem;
     }
 
@@ -407,7 +424,9 @@ img {
         color: white;
         font-weight: 300;
     }
-    .precio h2, .precio h1{
+
+    .precio h2,
+    .precio h1 {
         color: white;
     }
 
@@ -444,21 +463,24 @@ img {
         padding-left: 6rem;
         width: 900px;
     }
-    .tipoplanes p{
+
+    .tipoplanes p {
         padding-left: 1rem;
         padding-top: 1rem;
         padding-bottom: 1rem;
     }
-    .footer{
+
+    .footer {
         margin-top: 0rem;
     }
-  }
+}
 
-  @media only screen and (min-width: 1200px) and (max-width: 1700px) {
-    .tipos{
+@media only screen and (min-width: 1200px) and (max-width: 1700px) {
+    .tipos {
         margin-left: 5rem;
     }
-    .precio{
+
+    .precio {
         margin: 0;
         padding: 0;
         height: max-content;
@@ -470,17 +492,23 @@ img {
         padding-bottom: 3rem;
         margin-top: 10rem;
     }
-    .precio h2, .precio p, .precio h1{
+
+    .precio h2,
+    .precio p,
+    .precio h1 {
         color: white;
     }
-    .escoge{
+
+    .escoge {
         left: 20rem;
     }
-    .calcularMembresia{
+
+    .calcularMembresia {
         background-position: center;
         background-repeat: no-repeat;
     }
-    .plan p{
+
+    .plan p {
         max-width: 70rem;
     }
-  }
+}
