--- a/src/styles/Carrouselp2.css
+++ b/src/styles/Carrouselp2.css
@@ -24,6 +24,7 @@
     scroll-padding-top: 24px;
     border-radius: 8px;
     gap: 20px;
+    margin-left: 1rem;
 }
 
 .container .cards {
@@ -123,8 +124,8 @@
 }
 
 .cards{
-    height: 27rem;
+    height: 30rem;
     margin-bottom: 1rem;
-    max-width: 100%;
+    max-width: 85%;
 }
 
