--- a/src/styles/Carrouselp2.css
+++ b/src/styles/Carrouselp2.css
@@ -25,6 +25,7 @@
     border-radius: 8px;
     gap: 20px;
     margin-left: 1rem;
+    transition: scroll-left 0.5s ease;
 }
 
 .container .cards {
@@ -129,3 +130,25 @@
     max-width: 85%;
 }
 
+.navigation {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .nav-item {
+    font-family: 'Montserrat', sans-serif;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 1rem;
+    text-align: center;
+    line-height: 20px;
+    cursor: pointer;
+    margin-right: 20px;
+    margin-top: 20px;
+    font-size: 1rem;
+    cursor: pointer;
+  }
