--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -23,7 +23,7 @@ img {
 
 .precio {
     margin-top: 10rem;
-    padding-right: 50rem;
+    padding-right: 45rem;
 }
 
 #calculah1 {
@@ -483,6 +483,7 @@ img {
     .precio {
         margin: 0;
         padding: 0;
+        margin-right: 5rem;
         height: max-content;
         background-color: rgb(0, 80, 117);
         border-radius: 1rem;
