--- a/src/styles/page3.css
+++ b/src/styles/page3.css
@@ -48,10 +48,12 @@ img {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+    position: relative;
+    bottom: 5rem;
 }
 
 .textpasos {
-    margin-top: 10rem;
+    margin-top: 5rem;
     margin-left: 10rem;
 }
 
@@ -144,6 +146,10 @@ img {
     display: none;
 }
 
+.imagenp3 {
+    margin-bottom: 6rem;
+}
+
 
 
 @media only screen and (max-width: 767px) {
@@ -161,8 +167,9 @@ img {
     }
 
     .scrollp3 {
-        margin-bottom: 10rem;
         margin-left: 1rem;
+        position: relative;
+        bottom: 7rem;
     }
 
     .carrouselp3,
@@ -215,8 +222,10 @@ img {
         font-size: 2rem;
         width: 10rem;
         border: none;
-        margin-top: 20rem;
+        margin-top: 15rem;
     }
+
+    
 
 
     .razonescontainer {
@@ -373,8 +382,9 @@ img {
     }
 
 
-    .imagenp3 {
-        padding-top: 20rem;
+    .imagenp3 img {
+        position: relative;
+        top: 10rem;
     }
 
     .pasosp3 {
