--- a/src/styles/Scrollvalores.css
+++ b/src/styles/Scrollvalores.css
@@ -1,46 +1,47 @@
 .red2 {
-    background-color: rgb(0, 103, 150);
-  }
-  
-  .blue2 {
-    background-color: rgb(0, 103, 150);
-  }
-  
-  .green2 {
-    background-color: rgb(0, 103, 150);
-  }
-  
-  .scroll-snap-card2 {
-    height: 18rem;
-    width: 20rem;
-    scroll-snap-type: y mandatory;
-    overflow: auto;
-    border-radius: 10px;
-  }
-  
-  .scroll-snap-card2 .slide2 {
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    scroll-snap-align: start;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .scroll-snap-card2 .slide2 p {
-    font-family: 'Lato', sans-serif;
-    font-size: 1.6rem;
-    color: white;
-    font-weight: 700;
-    margin-bottom: 0;
-  }
+  background-color: rgb(0, 103, 150);
+}
 
-  .slide2 h5{
-    margin-left: 1rem;
-    margin-top: .5rem;
-    color: white;
-    font-family: 'Lato', sans-serif;
-    font-size: 1rem;
-    width: 80%;
-  }
+.blue2 {
+  background-color: rgb(0, 103, 150);
+}
+
+.green2 {
+  background-color: rgb(0, 103, 150);
+}
+
+.scroll-snap-card2 {
+  height: 18rem;
+  width: 20rem;
+  scroll-snap-type: y mandatory;
+  overflow: auto;
+  border-radius: 10px;
+  scroll-behavior: smooth; /* Agregamos la propiedad para un scroll suave */
+}
+
+.scroll-snap-card2 .slide2 {
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: start;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll-snap-card2 .slide2 p {
+  font-family: 'Lato', sans-serif;
+  font-size: 1.6rem;
+  color: white;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+.slide2 h5 {
+  margin-left: 1rem;
+  margin-top: .5rem;
+  color: white;
+  font-family: 'Lato', sans-serif;
+  font-size: 1rem;
+  width: 80%;
+}
