--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -157,7 +157,8 @@ img {
         display: block;
         width: 20rem;
         margin-top: 5rem;
-        margin-left: .3rem;
+        position: relative;
+        right: 1rem;
     }
 
     
