--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -9,21 +9,28 @@ img {
 .calcularMembresia {
     margin-top: 5rem;
     background-image: url('../assets/Membresia.webp');
-    background-repeat: round;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 55rem;
     border-radius: 1rem;
     padding-top: 12rem;
-    width: 100%;
 }
 
 .tipoplanes {
     margin-right: 0rem;
     padding-left: 10rem;
+    padding-bottom: 20rem;
 }
 
 .precio {
     margin-top: 10rem;
-    padding-right: 45rem;
+    position: relative;
+    right: 5rem;
+    top: 5rem;
+    background-color: rgb(6, 87, 124);
+    height: fit-content;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
 #calculah1 {
@@ -32,6 +39,7 @@ img {
     font-size: 4rem;
     color: rgb(0, 80, 117);
     margin: 0;
+    width: max-content;
 }
 
 .tipoplanes h2 {
@@ -53,12 +61,33 @@ img {
     padding: 1rem;
     padding-left: 2rem;
     border-radius: 1rem;
+    cursor: pointer;
+    user-select: none;
+}
 
+.tipoplanes li {
+    background-color: rgb(0, 80, 117);
+    font-size: 1.4rem;
+    list-style-type: none;
+    font-family: 'Monserrat', sans-serif;
+    color: white;
+    margin-top: 1rem;
+    border-radius: 1rem;
+    padding: 1rem;
+    max-width: 80%;
+    cursor: pointer;
+}
+
+.tipoplanes ul {
+    padding: 0;
+    padding-left: 1rem;
 }
 
 .calcularMembresia {
     display: flex;
     width: 100%;
+    height: max-content;
+    background-repeat: no-repeat;
 }
 
 
@@ -67,7 +96,7 @@ img {
     font-weight: 900;
     font-size: 4rem;
     font-style: italic;
-    color: rgb(0, 80, 117);
+    color: rgb(255, 255, 255);
     width: max-content;
     margin: 0;
 }
@@ -79,7 +108,7 @@ img {
     font-weight: 900;
     font-size: 2.4rem;
     font-style: italic;
-    color: rgb(0, 80, 117);
+    color: rgb(255, 255, 255);
 }
 
 .precio p {
@@ -87,21 +116,25 @@ img {
     font-weight: 400;
     font-size: .8rem;
     font-style: italic;
-    color: rgb(0, 80, 117);
+    color: rgb(255, 255, 255);
     width: 18rem;
 }
 
-.adquirir h1 {
+#adiquirirn {
     width: max-content;
-    padding-left: 8rem;
-    padding-right: 5rem;
     font-style: italic;
+    padding: 0 1rem 0 1rem;
     border-top-right-radius: 2rem;
     color: white;
     font-family: 'Monserrat', sans-serif;
     font-weight: 900;
-    font-size: 4rem;
+    font-size: 3rem;
     background: linear-gradient(to right, rgb(130, 94, 246), rgb(60, 50, 163));
+    cursor: pointer;
+}
+
+.tipoplanes {
+    margin-bottom: 5rem;
 }
 
 .adquirir h2 {
@@ -159,7 +192,8 @@ img {
     .ac {
         display: block;
     }
-    .tipos{
+
+    .tipos {
         display: none;
     }
 
@@ -207,8 +241,16 @@ img {
 
     .precio {
         margin: 0;
+        margin-right: 1rem;
         padding: 0;
         margin-top: 5rem;
+        position: static;
+        padding: 1rem;
+    }
+
+    #adiquirirn {
+        width: 18rem;
+        font-size: 2rem;
     }
 
     .precio p {
@@ -262,6 +304,8 @@ img {
         padding-left: 0;
         margin-top: 0rem;
         width: 100%;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 
     .tipoplanes h2 {
@@ -308,12 +352,16 @@ img {
         padding: 0;
         width: max-content;
         margin-top: 5rem;
-        margin-left: 9rem;
+        margin-left: 6rem;
         background-color: rgb(0, 80, 117);
         padding-left: 5rem;
         padding-right: 5rem;
         padding-top: 2rem;
         border-radius: 1rem;
+    }
+
+    #adiquirirn {
+        margin-bottom: 2rem;
     }
 
     .precio p {
@@ -323,10 +371,13 @@ img {
     }
 
     .precio h2,
-    .precio h1 {
+    .precio h1{
         color: white;
+        width: fit-content;
     }
-
+    .precio p{
+        width: 30rem;
+    }
     .tipos {
         margin: 0;
         margin-left: 4rem;
@@ -358,6 +409,7 @@ img {
     .tipoplanes {
         padding-top: 5rem;
         padding-left: 0;
+        padding-bottom: 0;
     }
 
     .tipoplanes p {
@@ -411,12 +463,16 @@ img {
         padding: 0;
         width: max-content;
         margin-top: 5rem;
-        margin-left: 9rem;
+        margin-left: 15rem;
         background-color: rgb(0, 80, 117);
         padding-left: 5rem;
         padding-right: 5rem;
         padding-top: 2rem;
         border-radius: 1rem;
+    }
+
+    #adiquirirn{
+        margin-bottom: 2rem;
     }
 
     .precio p {
@@ -428,6 +484,11 @@ img {
     .precio h2,
     .precio h1 {
         color: white;
+        width: fit-content;
+    }
+
+    .precio p{
+        width: 30rem;
     }
 
     .tipos {
@@ -461,6 +522,7 @@ img {
     .tipoplanes {
         padding-top: 5rem;
         padding-left: 6rem;
+        padding-bottom: 0;
         width: 900px;
     }
 
@@ -492,13 +554,25 @@ img {
         padding-left: 3rem;
         padding-bottom: 3rem;
         margin-top: 10rem;
+        width: 21rem;
     }
 
     .precio h2,
-    .precio p,
     .precio h1 {
         color: white;
+        font-size: 2rem;
+        width: fit-content;
     }
+
+    #adiquirirn{
+        font-size: 2rem;
+    }
+
+    .precio p{
+        font-size: 1rem;
+        width: fit-content;
+    }
+
 
     .escoge {
         left: 20rem;
