--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -1,5 +1,5 @@
 .profilecontainer {
-    margin-top: 5rem;
+    margin-top: 3rem;
     border-radius: 1rem;
     background-image: url('../assets/fondoblanco.webp');
     background-repeat: round;
@@ -10,23 +10,21 @@
     font-family: 'Monserrat', sans-serif;
     font-weight: 900;
     margin-bottom: 0;
-    font-size: 8rem;
+    font-size: 7rem;
     font-style: italic;
     background: linear-gradient(to right, rgb(3, 180, 211), rgb(2, 80, 116));
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
+    margin-left: 2rem;
 }
 
 .formprofile1 {
-    margin-left: 20rem;
+    margin-left: 10rem;
     width: 30rem;
     margin-right: 10rem;
 }
 
-.formprofile2 {
-    width: 60rem;
-}
 
 .form1 {
     display: flex;
@@ -35,7 +33,7 @@
     border-radius: 3rem;
     margin-bottom: 10rem;
     font-family: 'Lato', sans-serif;
-    height: 50rem;
+    height: 45rem;
 }
 
 .form1 p {
@@ -50,21 +48,21 @@
     color: rgb(2, 80, 116);
     background-color: white;
     border-radius: 1rem;
-    height: 4rem;
     width: 23rem;
     margin-left: 3rem;
     margin-top: 0;
     font-size: 2rem;
     padding-left: 1rem;
-    padding-top: 1.3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .form2 {
     font-family: 'Lato', sans-serif;
     background-color: rgb(52, 52, 52);
     border-radius: 3rem;
-    width: 40rem;
-    height: 60rem;
+    width: 65rem;
+    height:30rem;
     margin-bottom: 10rem;
 }
 
@@ -74,6 +72,7 @@
     color: white;
     margin-left: 3rem;
     margin-bottom: 0;
+    width: fit-content;
 }
 
 .form2 h2 {
@@ -100,7 +99,7 @@
     width: max-content;
     color: white;
     margin-left: 1.5rem;
-    padding-top: 4rem;
+    padding-top: 2rem;
 }
 
 @media only screen and (max-width: 767px) {
