fix header iphone 15

--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -79,7 +79,7 @@ a {
         text-align: center;
         justify-content: center;
         align-items: center;
-        margin-left: 7.5rem;
+        margin-left: 33vw;
     }
 
     .hamburguesa h2 {
